# Health_Chatbot

./: .gitignore  Readme.md  app.py  chatbox.py  evaluation.ipynb  main.py  pyproject.toml  report.md  requirements.txt
db/: chroma.sqlite3
document/: Note.txt  library
public/: answer.txt  chat_history.json  evaluation.txt  question.txt  text.txt
public/dataset/: benhviennhi_articles.csv  chunks_data.csv
src/: RAG.py  crew.py  default.sqlite  main.py
src/RAG/: advanced_rag.py  embedding_modify.py  preprocessing.py
src/apis/: query_api.py
src/config/: agents.yaml  tasks.yaml
src/data/: data.py  download_data.py
src/embedding/: docstore.json  index_store.json
src/embedding/Advance_Rag/: index_store.json
src/embedding/Test/: default__vector_store.json  docstore.json  index_store.json
src/embedding/evaluation/: docstore.json  index_store.json
src/embedding/pdf_1/: docstore.json  index_store.json
src/embedding/pdf_2/: docstore.json  index_store.json
src/embedding/pdf_3/: default__vector_store.json  docstore.json  index_store.json
src/embedding/sentence_index/: index_store.json
